      using en_US locale.  (Closes: #868897)

  * lib/Lintian/Check.pm:
    + [CL] Stop emitting {maintainer,uploader}-address-causes-mail-loops
      for @packages.debian.org addresses.  (Closes: #871575)

  * helpers/coll/objdump-info-helper:
    + [CL] Apply patch from Steve Langasek to accomodate binutils 2.29
      outputting symbols in a different format on ppc64el.
      (Closes: #869750)

 -- Niels Thykier <niels@thykier.net>  Sun, 23 Jul 2017 10:16:35 +0000

lintian (2.5.52) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - appstream-metadata-in-legacy-location
      - appstream-metadata-legacy-format
      - appstream-metadata-malformed-modalias-provide
      - appstream-metadata-missing-modalias-provide
      - copyright-contains-automatically-extracted-boilerplate
      - copyright-year-in-future
      - debian-rules-sets-DEB_BUILD_OPTIONS
      - elf-maintainer-script
      - emacsen-common-without-dh-elpa
      - file-contains-fixme-placeholder
      - gobject-instrospection-package-missing-depends-on-gir-depends
      - manpage-has-overly-generic-name
      - orig-tarball-missing-upstream-signature
      - package-installs-deprecated-upstart-configuration
      - udev-rule-missing-subsystem
      - udev-rule-missing-uaccess
      - udev-rule-unreadable
      - unconditional-use-of-dpkg-statoverride
      - useless-autoreconf-build-depends
    + Removed:
      - copyright-contains-dh-make-perl-boilerplate
      - package-depends-on-multiple-tkx-versions
      - restriction-formula-with-debhelper-without-debhelper-version
      - restriction-formula-without-versioned-dpkg-dev-dependency

  * checks/appstream-metadata.{desc,pm}:
    + [NT] New check by Petter Reinholdtsen.
  * checks/changelog-file.desc:
    + [AB] Fix typo "%gt;" vs "&gt;".
    + [CL] Expand the rationale for the
      latest-debian-changelog-entry-without-new-date tag to mention
      possible implications for SOURCE_DATE_EPOCH/reproducible builds.