@@ -121,6 +121,11 @@ lintian (2.5.53) UNRELEASED; urgency=medium
       outputting symbols in a different format on ppc64el.
       (Closes: #869750)
 
+  * t/tests/files-privacybreach/*:
+    + [CL] Add explicit test for packages including external fonts via
+      the Google Font API. Thanks to Ian Jackson for the report.
+      (Closes: #873434)
+
  -- Niels Thykier <niels@thykier.net>  Sun, 23 Jul 2017 10:16:35 +0000
 
 lintian (2.5.52) unstable; urgency=medium
